--- a/views/index.html
+++ b/views/index.html
@@ -32,14 +32,9 @@
           </fieldset>
         </form>
       </section>
-      <button
-        id="statistic"
-        type="submit"
-        onclick="window.location.replace('/api/stats')"
-      >
+      <button id="statistic" type="submit" onclick="gotoStats()">
         Statistic
       </button>
-      <p id="statsparagraph"></p>
     </main>
     <footer>
       <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
