--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,101 @@
-body {
-  background-color: tomato;
+:root {
   text-align: center;
+}
+
+body {
+  background-color: #569aff;
+}
+
+.button {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.tables {
+  display: none;
+  width: 70%;
+  height: 100%;
+  margin-top: 3rem;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  margin-left: 16.2rem;
+  margin-top: 4.5rem;
+  z-index: 1;
+}
+
+.tables .table-header {
+  font-size: 2rem;
+  font-family: cursive;
+}
+
+.tables .styled-table {
+  margin-left: auto;
+  margin-right: auto;
+  border-collapse: collapse;
+  font-size: 1.2em;
+  font-family: sans-serif;
+  text-align: center;
+  width: 70%;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.tables .styled-table thead tr {
+  background-color: #382e91;
+  color: #ffffff;
+}
+
+.tables .styled-table th,
+.tables .styled-table td {
+  padding: 12px 15px;
+}
+
+.tables .styled-table tbody tr {
+  background-color: rgba(255, 255, 255, 0.959);
+  z-index: 4;
+}
+
+.tables .styled-table tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+}
+
+.tables .styled-table tbody tr.style-row {
+  font-weight: bold;
+  color: #009879;
+}
+
+.button {
+  padding: 10px 15px;
+  font-size: 15px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #4c9baf;
+  border: none;
+  border-radius: 15px;
+  -webkit-box-shadow: 0 5px #236b81;
+          box-shadow: 0 5px #236b81;
+}
+
+.button:hover {
+  background-color: #56d2e2;
+}
+
+.button:active {
+  background-color: #06b9d1;
+  -webkit-box-shadow: 0 5px #076eaa;
+          box-shadow: 0 5px #076eaa;
+  -webkit-transform: translateY(3px);
+          transform: translateY(3px);
 }
 /*# sourceMappingURL=style.css.map */
