--- a/public/style.scss
+++ b/public/style.scss
@@ -1,3 +1,90 @@
+:root {
+  text-align: center;
+}
 body {
-  background-color: tomato;
+  background-color: rgb(86, 154, 255);
+}
+
+.button {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+.tables {
+  display: none;
+  width: 70%;
+  height: 100%;
+  margin-top: 3rem;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  margin-left: 16.2rem;
+  margin-top: 4.5rem;
+  z-index: 1;
+
+  .table-header {
+    font-size: 2rem;
+    font-family: cursive;
+  }
+  .styled-table {
+    margin-left: auto;
+    margin-right: auto;
+    border-collapse: collapse;
+    font-size: 1.2em;
+    font-family: sans-serif;
+    text-align: center;
+    width: 70%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+
+    thead tr {
+      background-color: #382e91;
+      color: #ffffff;
+    }
+    th,
+    td {
+      padding: 12px 15px;
+    }
+    tbody tr {
+      background-color: rgba(255, 255, 255, 0.959);
+      z-index: 4;
+    }
+
+    tbody tr:last-of-type {
+      border-bottom: 2px solid #009879;
+    }
+    tbody tr.style-row {
+      font-weight: bold;
+      color: #009879;
+    }
+  }
+}
+
+.button {
+  padding: 10px 15px;
+  font-size: 15px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #4c9baf;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 5px rgb(35, 107, 129);
+}
+
+.button:hover {
+  background-color: #56d2e2;
+}
+
+.button:active {
+  background-color: #06b9d1;
+  box-shadow: 0 5px rgb(7, 110, 170);
+  transform: translateY(3px);
 }
