--- a/public/style.css
+++ b/public/style.css
@@ -4,19 +4,13 @@
 
 body {
   background-color: #569aff;
+  margin: 0;
+  /* overflow: hidden; */
 }
 
-.button {
-  background-color: #4caf50;
+#fieldtest {
   border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
+  outline: none;
 }
 
 .tables {
@@ -25,7 +19,7 @@ body {
   height: 100%;
   margin-top: 3rem;
   text-align: center;
-  position: absolute;
+  position: relative;
   top: 0;
   margin-left: 16.2rem;
   margin-top: 4.5rem;
@@ -46,7 +40,7 @@ body {
   text-align: center;
   width: 70%;
   -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-          box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 .tables .styled-table thead tr {
@@ -74,28 +68,64 @@ body {
 }
 
 .button {
+  margin: 10px 10px 10px 10px;
   padding: 10px 15px;
   font-size: 15px;
   text-align: center;
   cursor: pointer;
   outline: none;
-  color: #fff;
+  /* color: rgb(255, 255, 255); */
   background-color: #4c9baf;
   border: none;
   border-radius: 15px;
   -webkit-box-shadow: 0 5px #236b81;
-          box-shadow: 0 5px #236b81;
+  box-shadow: 0 5px #236b81;
 }
 
 .button:hover {
   background-color: #56d2e2;
+  -webkit-transform: translateY(3px);
+  transform: translateY(3px);
+  box-shadow: 0 2px #076eaa;
 }
 
 .button:active {
   background-color: #06b9d1;
   -webkit-box-shadow: 0 5px #076eaa;
-          box-shadow: 0 5px #076eaa;
+  box-shadow: 0 5px #076eaa;
   -webkit-transform: translateY(3px);
-          transform: translateY(3px);
+  transform: translateY(3px);
 }
-/*# sourceMappingURL=style.css.map */
+
+#url_input {
+  text-align: center;
+  font-size: 20px;
+  /* padding: 10px 50px 10px 50px; */
+  margin-top: 10px;
+  box-sizing: border-box;
+  background-color: #92c1f7;
+  height: 40px;
+  width: 300px;
+  border-radius: 15px;
+  border: none;
+  outline: none;
+}
+
+#link:link,
+#link:visited {
+  background-color: rgb(161, 193, 253);
+  color: black;
+  border: 2px solid rgb(24, 132, 204);
+  padding: 8px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 15px;
+}
+
+#link:hover,
+#link:active {
+  background-color: rgb(74, 138, 255);
+  color: white;
+  border-radius: 15px;
+}
