--- a/views/404.css
+++ b/views/404.css
@@ -8,14 +8,14 @@ body {
   box-sizing: border-box;
   height: 100%;
   background-color: #000000;
-  background-image: radial-gradient(#11581e, #041607),
+  background-image: radial-gradient(#0db8fc, #040e16),
     url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
   background-repeat: no-repeat;
   background-size: cover;
   font-family: "Inconsolata", Helvetica, sans-serif;
   font-size: 1.5rem;
-  color: rgba(128, 255, 128, 0.8);
-  text-shadow: 0 0 1ex rgba(51, 255, 51, 1), 0 0 2px rgba(255, 255, 255, 0.8);
+  color: rgba(128, 179, 255, 0.8);
+  text-shadow: 0 0 1ex rgb(156, 51, 255), 0 0 2px rgba(79, 191, 255, 0.8);
 }
 
 .noise {
@@ -59,9 +59,9 @@ body {
   background-image: linear-gradient(
     0deg,
     transparent 0%,
-    rgba(32, 128, 32, 0.2) 2%,
-    rgba(32, 128, 32, 0.8) 3%,
-    rgba(32, 128, 32, 0.2) 3%,
+    rgba(30, 58, 109, 0.849) 2%,
+    rgba(84, 158, 255, 0.8) 3%,
+    rgba(7, 106, 151, 0.2) 3%,
     transparent 100%
   );
   background-repeat: no-repeat;
@@ -89,8 +89,9 @@ body {
 }
 
 .output {
-  color: rgba(128, 255, 128, 0.8);
-  text-shadow: 0 0 1px rgba(51, 255, 51, 0.4), 0 0 2px rgba(255, 255, 255, 0.8);
+  color: rgba(128, 208, 255, 0.8);
+  text-shadow: 0 0 1px rgba(22, 115, 190, 0.877),
+    0 0 2px rgba(255, 255, 255, 0.8);
 }
 
 .output::before {
