--- a/views/404.html
+++ b/views/404.html
@@ -12,15 +12,15 @@
     <div class="noise"></div>
     <div class="overlay"></div>
     <div class="terminal">
-      <h1>Error <span class="errorcode">404</span></h1>
+      <h1>Error 404</h1>
       <p class="output">
-        The page you are looking for might have been removed, had its name
-        changed or is temporarily unavailable.
+        The page you are trying to shorten has an issue. <br />
+        This can be caused because: <br />
+        - It does not exist. <br />
+        - URL is not valid. (format: http://www.example.com)<br />
+        - The page you are looking for is offline <br />
       </p>
-      <p class="output">
-        Please try to <a href="/">go back</a> or
-        <a href="/">return to the homepage</a>.
-      </p>
+      <p class="output">Please try to <a href="/">go back</a></p>
       <p class="output">Good luck.</p>
     </div>
   </body>
